<resources>
    <string name="app_name">QuizApp</string>

    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="logout">Выйти</string>

    <!--Новое приложение-->
    <string name="menu_profile">Профиль</string>
    <string name="menu_students">Студенты</string>
    <string name="menu_works">Курсовые</string>
    <string name="menu_themes">Темы</string>
    <string name="sign_up">Зарегистрироваться</string>

    <!--Auth-->
    <string name="enter_correct_name">Введите правильный email</string>
    <string name="enter_correct_password">Введите правильный пароль</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_lastname">Введите фамилию</string>
    <string name="user_not_found">Пользователь с таким именем и паролем не найден.Введите корректные данные</string>

    <string name="progress_message">Загрузка…</string>
    <string name="error_authentication">Authentication failed.</string>
    <string name="connection_reset">Ошибка подключения к серверу. Попробуйте переподключиться</string>
    <string name="server_reset">Ошибка подключения</string>

    <string name="if_member_login">Уже зарегистрированы? Войти</string>
    <string name="create_new_account">Создать аккаунт</string>
    <string name="authorized">Вы успешно авторизованы!</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="quit">Выйти</string>

    <!--Test-->
    <string name="test_name">Название теста</string>
    <string name="create_questions">Создать вопросы</string>
    <string name="qustionId">Вопрос</string>
    <string name="add_answer">Добавить ответ</string>
    <string name="next_question">Следующий вопрос</string>
    <string name="finish_questions">Завершить</string>
    <string name="test_desc">Описание</string>
    <string name="select_test_type">Выберите тип теста</string>
    <string name="test_type_one">Один ответ</string>
    <string name="test_type_many">Много ответов</string>
    <string name="test_type_text">Текстовый ответ</string>


    <string name="question_number">Вопрос %1$d/%2$d</string>
    <string name="add_question_number">Вопрос %1$d</string>

    <string name="search">Поиск</string>


    <!--Test dialog-->
    <string name="agree">Да</string>
    <string name="disagree">Нет</string>
    <string name="question_dialog_content">При выходе результат будет потерян. Выйти ?</string>
    <string name="question_dialog_title">Вы точно хотите выйти?</string>


    <!-- Exception -->
    <string name="exception_no_connection">Отсутствует интернет соединение</string>
    <string name="exception_time_out">Сервер просыпается&#8230;&#8230;&#8230;</string>
    <string name="exception_unknown">Неизвестная ошибка</string>
    <string name="tests">Тесты</string>
    <string name="new_tests">Новые</string>
    <string name="passed_tests">Пройденные</string>
    <string name="test_questions">Количество вопросов</string>
    <string name="description">Описание</string>
    <string name="do_test">Пройти тест</string>
    <string name="question_text">Вопрос</string>
    <string name="set_answer">Ответить</string>
    <string name="add_test">Новый тест</string>
    <string name="right_asnwers">Правильных ответов</string>
    <string name="wrong_answers">Неправильных ответов</string>
    <string name="answer">Ответ</string>
    <string name="new_test">Новый тест</string>
    <string name="right_answer">Правильный ответ</string>
    <string name="your_answer">Ваш ответ</string>
    <string name="open_test">Открыть тест</string>
    <string name="close_test">Закрыть тест</string>
    <string name="test_opened">Тест открыт</string>
    <string name="test_closed">Тест закрыт</string>
    <string name="pass_feedback_next">Основной тест был пройден.\nОцените выступление, ответив \nна пару вопросов</string>
    <string name="evaluate_lector">Оценить</string>
    <string name="give_feedback">Отзыв</string>
    <string name="wait_test_result">Ожидайте результата теста</string>

    <string name="error">Ошибка</string>
    <string name="ok">Ок</string>

    <string name="toolbar_login">Вход</string>
    <string name="toolbar_create_acc">Регистрация</string>
    <string name="show_result">Посмотреть результат</string>
    <string name="show_answers">Посмотреть ответы</string>
    <string name="is_test_open">Тест открыт</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="date_creation">Дата создания</string>
    <string name="status">Состояние</string>
    <string name="test_not_started">Тест не открыт</string>
    <string name="test_id">Идентификатор теста</string>
    <string name="test_result">Результат</string>
    <string name="graph_axis">X - номер вопроса\nY - кол-во правильных ответов</string>
    <string name="repeat">Повторить</string>
    <string name="download_error">Произошла ошибка при загрузке данных</string>
    <string name="close_test_result_title">Завершить просмотр</string>

    <string name="stat_on_each_answer">Статистика по выбору правильного ответа на каждый вопрос</string>
    <string name="stat_on_feedback">Статистика по фидбэку</string>
    <string name="number_of_participants">Количество прохождений</string>
    <string name="main_info">Основная информация</string>
    <string name="test_should_be_passed">Тест не удалось закрыть. Тест должен быть пройден хотя бы одним участником!
    </string>
    <string name="email_exists">Пользователь с таким email уже существует!</string>
</resources>
