<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large"
            android:layout_marginStart="@dimen/large"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal"
                android:text="@string/test_name"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text.16" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text.14"
                tools:text="Yes" />

            <include layout="@layout/layout_divider"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal"
                    android:text="@string/test_questions"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text.16" />

            <TextView
                    android:id="@+id/tv_questions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text.14"
                    tools:text="Yes" />

            <include layout="@layout/layout_divider"/>

            <TextView
                    android:id="@+id/tv_do_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_test"
                    android:textSize="@dimen/text.16"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:layout_marginTop="@dimen/normal"
                    android:layout_marginBottom="@dimen/normal"
            />

            <TextView
                    android:id="@+id/tv_open_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_test"
                    android:textSize="@dimen/text.16"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:layout_marginTop="@dimen/normal"
                    android:layout_marginBottom="@dimen/normal"
                    android:visibility="gone"
            />

            <TextView
                    android:id="@+id/tv_close_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close_test"
                    android:textSize="@dimen/text.16"
                    android:textStyle="bold"
                    android:textColor="@color/primary"
                    android:layout_marginTop="@dimen/normal"
                    android:layout_marginBottom="@dimen/normal"
                    android:visibility="gone"
            />

            <include layout="@layout/layout_divider"/>

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal"
                android:text="@string/description"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text.16" />

           <include layout="@layout/layout_expandable_text_view"/>

        </LinearLayout>

    </ScrollView>

    <!--<include layout="@layout/layout_add_comment"/>-->

</RelativeLayout>
