<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_marginTop="8dp"
>

    <LinearLayout
            android:id="@+id/li_name"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal"
                android:text="@string/test_name"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text.16" />

        <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text.14"
                tools:text="Authors" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/li_id"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal"
                android:text="@string/test_id"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text.16" />

        <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text.14"
                tools:text="Authors" />

    </LinearLayout>


    <LinearLayout
            android:id="@+id/li_is_open"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal"
                android:text="@string/status"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text.16" />

        <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text.14"
                tools:text="Authors" />

    </LinearLayout>

    <include layout="@layout/layout_divider"/>

</LinearLayout>